// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full loading 1`] = `
<section
  className="sc-bwzfXH gVSmEA"
>
  <div
    className="sc-bdVaJa dAIsho"
  />
</section>
`;

exports[`loading as default 1`] = `
<section
  className="sc-bwzfXH hgQgvr"
>
  <div
    className="sc-bdVaJa dAIsho"
  />
</section>
`;

exports[`loading with no background 1`] = `
<section
  className="sc-bwzfXH fTZzux"
>
  <div
    className="sc-bdVaJa dAIsho"
  />
</section>
`;

exports[`loading with no wrapper 1`] = `
<div
  className="sc-bdVaJa dAIsho"
/>
`;

exports[`not visible loading 1`] = `null`;

exports[`spinner loading type 1`] = `
<section
  className="sc-bwzfXH hgQgvr"
>
  <div
    className="sc-bdVaJa dAIsho"
  />
</section>
`;
